# pytodo

./: .coveragerc  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
src/: main.py  todo.py  todo_list.py  user.py  user_history.json
src/models/: todo.py  todo_list.py  todo_step.py  user.py
tests/: conftest.py
